<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    android:background="@color/listbackground"
    tools:context="com.example.android.items.EditorActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/imagex"
        android:background="@color/background"
        android:src="@android:drawable/ic_menu_camera"
        />
    <Button
        android:id="@+id/photobutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo_Button"/>
    <TextView
        android:id="@+id/uriLocker"
        android:layout_weight="0"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/itemLabel"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item name    "
            style="@style/CategoryStyle"/>
        <EditText
            android:layout_weight="0"
            android:id="@+id/nameEdit"
            style="@style/EditorFieldStyle"
            android:textColor="#FFFFFF"
            android:hint="@string/hint_item_name"
            android:inputType="textCapWords"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/priceLabel"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item price   $"
            style="@style/CategoryStyle"/>
        <EditText
            android:layout_weight="0"
            android:id="@+id/priceEdit"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_item_price"
            android:inputType="number"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/quantityLabel"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item Quantity"
            style="@style/CategoryStyle"/>
        <EditText
            android:layout_weight="0"
            android:id="@+id/quantityEdit"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_item_quantity"
            android:inputType="number"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/emailLabel"
        android:layout_weight="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vendor Email "
        style="@style/CategoryStyle"/>
    <EditText
        android:layout_weight="0"
        android:id="@+id/emailEdit"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_vendor_email"
        android:inputType="textCapWords"
        android:textColor="#FFFFFF"
        />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
        android:id="@+id/salebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sell"/>
        <Button
            android:layout_weight="1"
            android:id="@+id/purchasebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Purchase"/>
        <Button
            android:layout_weight="1"
            android:id="@+id/orderbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_Button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:id="@+id/updatebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_Button"
        />
        <Button
            android:layout_weight="1"
            android:id="@+id/deletebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_Button"
        />
    </LinearLayout>
</LinearLayout>
